--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -225,7 +225,7 @@ ol,ul {
     }
     input[type="checkbox"]:checked ~ .slider {
         background-color: var(--clr-primary) 
-      }-
+      }
 }
 
 
